--- a/app/src/main/res/layout/mainactivity_content_main.xml
+++ b/app/src/main/res/layout/mainactivity_content_main.xml
@@ -106,7 +106,7 @@
 
         <fragment
             android:id="@+id/fragment_profile"
-            android:name="com.example.star.movie4share.fragment.HomePage"
+            android:name="com.example.star.movie4share.fragment.Profile"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="10" />
