--- a/app/src/main/res/layout/activity_admin_floating_btn.xml
+++ b/app/src/main/res/layout/activity_admin_floating_btn.xml
@@ -1,10 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightGray"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@drawable/background"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@drawable/side_nav_bar_opposite"
+        android:layout_gravity="center"
+        android:orientation="horizontal"
+        >
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="20dp"
+            android:src="@drawable/admin"
+            android:layout_gravity="center"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:textSize="24sp"
+            android:text="Admin"
+            android:layout_gravity="center"
+            android:textColor="#FFFFFF"
+            />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:orientation="vertical"
+            android:background="#00000000"
+            android:layout_marginStart="195dp"
+            android:layout_gravity="center_vertical"
+            >
+
+            <ImageButton
+                android:id="@+id/admin_add_user_imageBtn"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:scaleType="fitXY"
+                android:background="#00000000"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/admin_add"
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="添加"
+                android:textColor="@color/lightpink"
+                android:textSize="13sp"/>
+        </LinearLayout>
+
+    </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/admin_floating_btn"
@@ -14,67 +70,42 @@
         android:layout_margin="10dp"
         android:layout_marginStart="10dp"
         android:padding="10dp"
-        app:srcCompat="@android:drawable/ic_dialog_dialer" />
+        app:srcCompat="@android:drawable/ic_dialog_dialer"
+        android:visibility="gone"/>
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/lightGray"
-        android:orientation="vertical"
-        android:layout_marginTop="20dp">
+        android:orientation="vertical">
 
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            >
+        <!--<include-->
 
-            <ImageButton
-                android:id="@+id/admin_add_user_imageBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/lightGray"
-                app:srcCompat="@drawable/admin_add_user" />
+            <!--layout="@layout/admin_add_users"-->
+            <!--android:layout_width="300dp"-->
+            <!--android:layout_height="50dp"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:layout_marginTop="30dp"-->
+            <!--/>-->
 
-            <ImageButton
-                android:id="@+id/admin_delete_user_imageBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="40dp"
-                android:background="@color/lightGray"
-                app:srcCompat="@drawable/admin_delete_user" />
+        <!--<LinearLayout-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:orientation="horizontal"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:layout_marginTop="20dp"-->
+            <!--&gt;-->
 
-        </LinearLayout>
+            <!--<ImageButton-->
+                <!--android:id="@+id/admin_delete_user_imageBtn"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginStart="40dp"-->
+                <!--android:background="@color/lightGray"-->
+                <!--app:srcCompat="@drawable/admin_delete_user" />-->
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:orientation="horizontal"
-            android:layout_marginTop="5dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/lightGray"
-                android:textColor="@color/darkgray"
-                android:text="添加用户"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="115dp"
-                android:background="@color/lightGray"
-                android:textColor="@color/darkgray"
-                android:text="删除用户"
-                />
-
-        </LinearLayout>
+        <!--</LinearLayout>-->
 
 
         <View
@@ -83,22 +114,23 @@
             android:layout_height="2dp"
             android:layout_marginTop="5dp"
             android:background="@color/lightGray"/>
-        <View
-            android:id="@+id/activity_confirm_line2"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:background="@color/lightGray"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:text="（单击以显示密码，长按以编辑用户）"
-            android:textColor="@color/darkgray"
+            android:textColor="@color/midGray"
             >
         </TextView>
+
+        <View
+            android:id="@+id/activity_confirm_line2"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/lightGray"/>
+
 
         <ListView
             android:id="@+id/admin_listview"
@@ -110,4 +142,4 @@
 
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
