--- a/app/src/main/res/layout/fragment_find_new.xml
+++ b/app/src/main/res/layout/fragment_find_new.xml
@@ -1,8 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@drawable/side_nav_bar_opposite"
+        android:layout_gravity="center"
+        android:orientation="horizontal"
+        >
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="20dp"
+            android:src="@drawable/findnew"
+            android:layout_gravity="center"
+            />
+
+        <TextView
+            android:id="@+id/fragment_findnew_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:textSize="24sp"
+            android:text="分类"
+            android:layout_gravity="center"
+            android:textColor="#FFFFFF"
+            />
+
+    </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
