--- a/app/src/main/res/layout/fragment_shop_cart.xml
+++ b/app/src/main/res/layout/fragment_shop_cart.xml
@@ -48,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical|end"
-            android:layout_marginStart="155dp"
+            android:layout_marginStart="140dp"
             android:text="清空"
             android:textSize="14sp"
             android:background="#00000000"
@@ -117,12 +117,12 @@
             android:layout_height="match_parent"
             android:text="合计:￥0"
             android:gravity="center_vertical"
-            android:layout_marginStart="130dp"
+            android:layout_marginStart="100dp"
             android:textColor="@color/darkgray"/>
 
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:text="结算(0)"
             android:layout_marginStart="20dp"
