--- a/app/src/main/res/layout/activity_confirm_order.xml
+++ b/app/src/main/res/layout/activity_confirm_order.xml
@@ -4,22 +4,42 @@
     android:background="@color/white"
     tools:context="com.example.star.movie4share.activity.ConfirmOrderActivity">
 
-    <TextView
-        android:id="@+id/title"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:gravity="center"
-        android:textSize="18sp"
-        android:text="订单填写"
-        android:textColor="#3e3a39"
+        android:layout_height="50dp"
         android:background="@color/lightGray"
-        android:layout_alignParentTop="true"/>
+        android:layout_gravity="center"
+        android:orientation="horizontal"
+        android:id="@+id/fragment_confirm_order_title"
+        >
+
+        <ImageView
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:layout_marginStart="20dp"
+            android:src="@drawable/confirm_order"
+            android:layout_gravity="center"
+            />
+
+        <TextView
+            android:id="@+id/fragment_confirmorder_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:textSize="22sp"
+            android:text="确认订单"
+            android:layout_gravity="center"
+            android:textColor="@color/midGray"
+            />
+
+    </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/receiver"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/title"
+        android:layout_below="@id/fragment_confirm_order_title"
         android:paddingLeft="30dp"
         android:paddingStart="30dp"
         android:paddingEnd="30dp"
@@ -32,7 +52,7 @@
             android:layout_width="75dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
-            android:text="姓名："
+            android:text="收货人："
             android:textSize="14sp"
             android:textColor="#595757"/>
 
@@ -67,7 +87,7 @@
             android:layout_width="75dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/activity_confirm_receiver_name"
-            android:text="发货地址："
+            android:text="收获地址："
             android:layout_marginBottom="5dp"
             android:textSize="14sp"
             android:textColor="#595757" />
@@ -181,7 +201,7 @@
                 android:layout_marginBottom="5dp"
                 android:text="保存"
                 android:textSize="12sp"
-                android:textColor="@color/Naranja"/>
+                android:textColor="@color/midpink"/>
 
             <TextView
                 android:id="@+id/activity_confirm_submit_cancel_textview"
@@ -193,7 +213,7 @@
                 android:layout_marginStart="20dp"
                 android:text="取消"
                 android:textSize="12sp"
-                android:textColor="@color/Naranja"/>
+                android:textColor="@color/midpink"/>
 
         </RelativeLayout>
     </RelativeLayout>
@@ -203,60 +223,81 @@
         android:layout_below="@id/receiver"
         android:layout_width="match_parent"
         android:layout_height="2dp"
+        android:scaleType="fitXY"
         android:background="@color/lightGray"/>
 
-    <TextView
-        android:id="@+id/activity_confirm_product_num"
-        android:layout_above="@id/activity_confirm_total_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="共0种商品"
-        android:textSize="16sp"
-        android:textColor="#595757"/>
-
-    <TextView
-        android:id="@+id/activity_confirm_total_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/activity_confirm_order_button"
-        android:layout_centerHorizontal="true"
-        android:text="合计：￥0"
-        android:textSize="16sp"
-        android:textColor="@color/Naranja"/>
-
-    <Button
-        android:id="@+id/activity_confirm_order_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center_vertical"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="20dp"
-        android:background="@color/lightGray"
-        android:text="确认付款"
-        android:textColor="@color/Naranja"
-        android:textSize="16sp" />
-
-    <View
-        android:id="@+id/activity_confirm_line2"
-        android:layout_above="@id/activity_confirm_product_num"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@color/lightGray"/>
 
     <ListView
         android:id="@+id/confirm_product_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/activity_confirm_line"
-        android:layout_above="@id/activity_confirm_line2"
         android:dividerHeight="0dp"
         android:divider="#00000000">
     </ListView>
+
+    <ImageView
+        android:id="@+id/activity_confirm_line2"
+        android:layout_below="@id/confirm_product_list"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/lightGray"/>
+
+    <LinearLayout
+        android:id="@+id/activity_confirm_product_layout"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_below="@+id/activity_confirm_line2"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="150dp"
+            android:orientation="vertical">
+
+
+            <TextView
+                android:id="@+id/activity_confirm_product_num"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_gravity="center|bottom"
+                android:text="共0种商品"
+                android:textSize="16sp"
+                android:textColor="#595757"/>
+
+
+            <TextView
+                android:id="@+id/activity_confirm_total_price"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:text="合计：￥0"
+                android:layout_gravity="center"
+                android:textSize="16sp"
+                android:textColor="@color/midpink"/>
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/activity_confirm_order_button"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/round_button"
+            style="?android:attr/borderlessButtonStyle"
+            android:text="确认付款"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
+
+    </LinearLayout>
+
+
+
+
+
 
 
 </RelativeLayout>
