--- a/app/src/main/res/layout/add_to_cart.xml
+++ b/app/src/main/res/layout/add_to_cart.xml
@@ -24,7 +24,7 @@
                 android:layout_gravity="top|left"
                 android:layout_margin="5dp"
                 android:scaleType="fitXY"
-                android:src="@drawable/steve_jobs"/>
+                android:src="@drawable/web_loading"/>
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -42,7 +42,8 @@
                     android:layout_weight="1"
                     android:gravity="top"
                     android:text="￥1000"
-                    android:textColor="#ffea0c23"/>
+                    android:textSize="22dp"
+                    android:textColor="@color/midpink"/>
 
                 <TextView
                     android:id="@+id/shopcart_pop_up_stock_num"
@@ -54,7 +55,7 @@
                     android:layout_weight="1"
                     android:gravity="top"
                     android:text="库存：100"
-                    android:textColor="@color/black"/>
+                    android:textColor="@color/lightGray"/>
 
             </LinearLayout>
 
@@ -101,7 +102,8 @@
                 android:layout_toStartOf="@+id/tv_pop_number"
                 android:padding="0dp"
                 android:text="－"
-                android:textColor="#000000"/>
+                android:background="@color/lightGray"
+                android:textColor="@color/darkgray"/>
 
             <EditText
                 android:id="@+id/tv_pop_number"
@@ -115,6 +117,7 @@
                 android:layout_toStartOf="@+id/btn_pop_plus"
                 android:gravity="center"
                 android:padding="0dp"
+                android:textColor="@color/darkgray"
                 android:text="1"/>
 
             <Button
@@ -130,7 +133,8 @@
                 android:layout_marginEnd="20dp"
                 android:padding="0dp"
                 android:text="＋"
-                android:textColor="#000000"/>
+                android:background="@color/lightGray"
+                android:textColor="@color/darkgray"/>
         </RelativeLayout>
 
 
@@ -139,7 +143,7 @@
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_gravity="bottom"
-            android:background="#ffea1a15"
+            android:background="@drawable/side_nav_bar_opposite"
             android:gravity="center"
             android:text="确定"
             android:textColor="#ffffffff"/>
