--- a/app/src/main/res/layout/admin_dialog.xml
+++ b/app/src/main/res/layout/admin_dialog.xml
@@ -30,4 +30,16 @@
         android:layout_height="wrap_content"
         android:hint="为用户设置密码"/>
 
+    <TextView
+        android:id="@+id/admin_dialog_vip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="会员折扣：" />
+
+    <EditText
+        android:id="@+id/admin_dialog_vip_edittext"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="输入0-1的数字"/>
+
 </LinearLayout>
