--- a/app/src/main/res/layout/fragment_shop_cart.xml
+++ b/app/src/main/res/layout/fragment_shop_cart.xml
@@ -111,21 +111,36 @@
             android:textColor="@color/darkgray"
             />
 
-        <TextView
-            android:id="@+id/fragment_shopcart_total_price"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="合计:￥0"
-            android:gravity="center_vertical"
-            android:layout_marginStart="100dp"
-            android:textColor="@color/darkgray"/>
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/fragment_shopcart_total_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="合计:￥0"
+                android:gravity="center_vertical"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="90dp"
+                android:textColor="@color/pink"/>
 
+            <TextView
+                android:id="@+id/fragment_shopcart_total_coupon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:gravity="center_vertical"
+                android:layout_marginStart="90dp"
+                android:textColor="@color/darkgray"/>
+
+        </LinearLayout>
 
         <Button
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:text="结算(0)"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="30dp"
             android:layout_marginEnd="20dp"
             android:textColor="@color/white"
             android:layout_gravity="center_vertical"
