--- a/app/src/main/res/layout/mainactivity_tab_shopcart.xml
+++ b/app/src/main/res/layout/mainactivity_tab_shopcart.xml
@@ -10,14 +10,15 @@
         android:layout_width="27dp"
         android:layout_height="27dp"
         android:layout_gravity="center"
-        android:src="@drawable/home_1"/>
+        android:src="@drawable/shopcart_1"/>
 
 
     <TextView
         android:id="@+id/tab_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="首页"
+        android:text="购物车"
+        android:layout_gravity="center_horizontal"
         android:textSize="12sp"
         android:gravity="center"
         android:textColor="#696969"/>
