--- a/app/src/main/res/layout/fragment_shop_cart.xml
+++ b/app/src/main/res/layout/fragment_shop_cart.xml
@@ -53,7 +53,8 @@
             android:textSize="14sp"
             android:background="#00000000"
             android:textColor="@color/white"
-            android:id="@+id/fragment_shopcart_btn_delete_all_product" />
+            android:id="@+id/fragment_shopcart_btn_delete_all_product"
+            />
 
     </LinearLayout>
 
