--- a/app/src/main/res/layout/mainactivity_app_bar_main.xml
+++ b/app/src/main/res/layout/mainactivity_app_bar_main.xml
@@ -24,11 +24,13 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floating_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|start"
-        android:visibility="gone"
-        android:layout_margin="10dp"
-        app:srcCompat="@android:drawable/ic_dialog_dialer" />
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_gravity="top|end"
+        android:layout_marginEnd="15dp"
+        android:layout_marginTop="40dp"
+        android:background="#00000000"
+        app:backgroundTint="#00000000"
+        app:srcCompat="@drawable/redpocket" />
 
 </android.support.design.widget.CoordinatorLayout>
